# urc-cnip-2015

./: .gitignore  README.md  env_setup.sh  gazebo.bash
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin_ws/devel/lib/pkgconfig/: rozebo_demo.pc
catkin_ws/devel/lib/rozebo_demo/: husky_ros_node
catkin_ws/devel/share/rozebo_demo/cmake/: rozebo_demoConfig.cmake
catkin_ws/gazebo/models/rover/: model.sdf  model.sdf.bkp
catkin_ws/gazebo/models/rover_CAD/: model.sdf
catkin_ws/gazebo/models/tutorials/: model.config  model.sdf
catkin_ws/gazebo/plugins/: CMakeCache.txt  Makefile  cmake_install.cmake
catkin_ws/gazebo/plugins/model_plugin_demo/: CMakeLists.txt  model_plugin.cc
catkin_ws/gazebo/worlds/: dem_only.world  dem_plugin.world  plugin_only.world  test.world
catkin_ws/src/rover_test/: CMakeLists.txt  package.xml
catkin_ws/src/rover_test/launch/: dem_only.launch  dem_plugin.launch  plugin_only.launch  rover_test.launch
catkin_ws/src/rover_test/msg/: RoverCommands.msg
catkin_ws/src/rover_test/src/: rover_ros_node.cpp  rover_ros_plugin.cpp
catkin_ws/src/rozebo_demo/: CMakeLists.txt  package.xml
catkin_ws/src/rozebo_demo/launch/: dem_only.launch  dem_plugin.launch  plugin_only.launch
catkin_ws/src/rozebo_demo/src/: husky_ros_node.cpp  husky_ros_plugin.cpp  world_plugin.cpp
gazebo/models/rover/: model.sdf
gazebo/plugins/demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  model_plugin.cc
gazebo/worlds/: plugin_demo.world
